--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -58,7 +58,7 @@
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:none;height:0px;"  >
+          <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:block;height:0px;"  >
 				<tr>
 				   <td></td>
 				   <td></td>
@@ -126,7 +126,7 @@
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="slTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
+          <table data-dojo-attach-point="slTable"  class="CSSTableGenerator" style="display:block;height:0px"  >
 				<tr>
 				   <td></td>
 				   <td></td>
@@ -174,12 +174,12 @@
          <table class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
-		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
+		   	 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
 		   </td>
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
+          <table data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:block;height:0px"  >
 				<tr>
 				   <td>Date</td>
 				   <td>Price</td>
