--- a/js/gis/dijit/NavTools/templates/NavTools.html
+++ b/js/gis/dijit/NavTools/templates/NavTools.html
@@ -53,6 +53,7 @@
 		<option type="separator"></option>
 		<option value="bookmarks">Bookmarks</option>
 		<option value="goto">Goto</option>
+		<!--<option value="editor">Editor</option>-->
 	</select>
 
 
