--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -58,7 +58,7 @@
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:block;height:0px;"  >
+          <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:none;height:0px;"  >
 				<tr>
 				   <td></td>
 				   <td></td>
@@ -126,14 +126,14 @@
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="slTable"  class="CSSTableGenerator" style="display:block;height:0px"  >
+          <table data-dojo-attach-point="slTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
 				<tr>
 				   <td></td>
 				   <td></td>
 				</tr>
 				<tr>
 				   <td>Land Value</td>
-				   <td data-dojo-attach-point="pcLandVal">fdsfsdf</td>
+				   <td data-dojo-attach-point="pcLandVal"></td>
 				</tr>
 				<tr>
 				   <td>Agricultural Value</td>
@@ -179,7 +179,7 @@
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:block;height:0px"  >
+          <table data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
 				<tr>
 				   <td>Date</td>
 				   <td>Price</td>
