--- a/js/gis/dijit/NavTools/css/NavTools.css
+++ b/js/gis/dijit/NavTools/css/NavTools.css
@@ -56,11 +56,10 @@
 
 }
 #selWTool {
-   padding: 0px !important;
-   margin: 0px !important;
-   font-size:8px;
+ 
+   font-size:11px !important;
    width: 120px;
-   height:14px;
+   height:23px;
 }
 .dj_ie6 .dijitSelect .dijitSelectLabel, .dj_ie7 .dijitSelect .dijitSelectLabel, .dj_ie8 .dijitSelect .dijitSelectLabel, .dj_iequirks .dijitSelect .dijitSelectLabel, .dijitSelect td, .dj_ie6 .dijitSelect input, .dj_iequirks .dijitSelect input, .dj_ie6 .dijitSelect .dijitValidationContainer, .dj_ie6 .dijitTextBox input, .dj_ie6 input.dijitTextBox, .dj_iequirks .dijitTextBox input.dijitValidationInner, .dj_iequirks .dijitTextBox input.dijitArrowButtonInner, .dj_iequirks .dijitTextBox input.dijitSpinnerButtonInner, .dj_iequirks .dijitTextBox input.dijitInputInner, .dj_iequirks input.dijitTextBox {
     line-height: 0%;
