Fixed Chucks punchlist

--- a/js/gis/dijit/NavTools/templates/NavTools.html
+++ b/js/gis/dijit/NavTools/templates/NavTools.html
@@ -49,7 +49,7 @@
 	<select id="selWTool" data-dojo-id="selWTool" name="selWTool" style="padding:0px 0px 0px 25px" data-dojo-attach-event="onChange:selectToolWdgt" >
 		<option value="" >Select a Tool</option>
 		<option value="identify" style="font-weight:bold" >Identify</option>
-		<option value="print" style="font-weight:bold" >Print</option>
+		<option value="print" style="font-weight:bold" >Generate Print</option>
 		<option value="draw" style="font-weight:bold" >Draw</option>
 		<option value="measure" style="font-weight:bold" >Measure</option>
 		<!--<option type="separator"></option>-->
