--- a/js/gis/dijit/Print/templates/Print.html
+++ b/js/gis/dijit/Print/templates/Print.html
@@ -1,7 +1,17 @@
 <div class="gis_PrintDijit">
     <div class="formContainer">
         <div data-dojo-type="dijit/form/Form" data-dojo-attach-point="printSettingsFormDijit">
-            <table cellspacing="5" style="width:100%;">
+
+
+            <table style="width:100%;">
+                <tr>
+                    <td style="font-size:9px"><p>See the link to printable PDF appear below when request is complete</p> </td>
+
+                </tr>
+
+            </table>
+
+          <table cellspacing="5" style="width:100%;">
                 <tr>
                     <td style="width:50px;">
                         ${i18n.title}:
