--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -200,7 +200,7 @@
 
 
                                                 <div id="pMapFrm" class="pContRes" data-dojo-attach-point="pMapFrm" data-dojo-type="dijit/layout/ContentPane" style="display:none;font-size:12px">
-                                                    <p>Use these map search tools to select parcels on the map</p>
+                                                    <p>Use these map search tools to select parcels on the map. Draw a selection shape on the map and double click your mouse to complete the shape.</p>
 
 
                                                     <!--
@@ -272,16 +272,6 @@
 															</li>
 														</ul>
 													</div>
-
-
-
-
-
-
-
-
-
-
 
 
 
