--- a/js/gis/dijit/property/css/property.css
+++ b/js/gis/dijit/property/css/property.css
@@ -151,8 +151,12 @@ select {
   width:95% !important;
 }
  
-
- 
+#widget_af_tbBus{
+  width:95% !important;
+}
+#widget_af_tbSub{
+  width:95% !important;
+} 
 .propertyDijit .listdbootstrapFix{
     padding: 0 0 0 25px;
     //overflow: hidden !important;
