--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -22,7 +22,7 @@
                                     <div data-dojo-type="dijit/layout/ContentPane" title="Pane" doLayout="false" style="width:320px;height:500px">
                                         <div data-dojo-type="dijit/form/Form" data-dojo-attach-point="propertyFormDijit"  >
 
-                                            <div style="margin:0px 0px 0px 45px;padding: 0px; font-size: 11px !important; z-index: 900; width: 220px; height: 18px;">
+                                            <div style="margin:30px 0px 0px 45px;padding: 0px; font-size: 11px !important; z-index: 900; width: 220px; height: 18px;">
 
                                                <div style="margin:0px 8px 0px 0px;float:left; padding:0px;margin;0px;font-weight:bold">Search Type:</div>
                                                 <div style="padding: 0px; float: right; padding:0px;margin;0px;">
@@ -49,7 +49,6 @@
                                                     <input id="tbOwner" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="searchOwner"   style="width: 286px;"></input>
                                                     <br>
                                                     <br>
-                                                    <br>
 
                                                     <p style="margin:0px;font-weight:bold">Address or Street Name:</p>
 
@@ -58,7 +57,7 @@
                                                     <br>
                                                 </div>
                                             </div>
-                                                 <div id="pBusForm" class="pContRes" data-dojo-attach-point="pBusForm" data-dojo-type="dijit/layout/ContentPane" style="display:none;">
+                                                 <div id="pBusForm" class="pContRes" data-dojo-attach-point="pBusForm" data-dojo-type="dijit/layout/ContentPane" style="display:none;width:350px">
                                                     <p>Business:</p>
                                                     <input id="tbBus" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="searchBus" data-dojo-props="name:'searchBus',trim:true,required:true,value:'',placeholder:'Enter the text you want to search for.',class:'searchText'" style="width: 219px;"></input>
                                                     <br>
@@ -115,7 +114,7 @@
 
 
                                                     <p>Date Range:</p>
-                                                    <div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
+                                                    <div style="padding: 0px;margin: 0px; font-size: 9px; width: 250px; ">
 
 													    <!--
 													    <input id="tbSlDateFrom" type="text" auFromcomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="tbSlDateFrom" data-dojo-props="name:'searchSlDateFrom',trim:true,required:true,value:'',placeholder:'Enter the text you want From search for.',class:'searchText'" style="width: 99px;float:left"></input>
@@ -154,7 +153,7 @@
 														 <input id="tbSlAcreTo" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="tbSlAcreTo" data-dojo-props="name:'searchSlDateFrom',trim:true,required:true,value:'',placeholder:'Enter the text you want to search for.',class:'searchText'" style="width: 99px;float:right"></input>
 
 													</div>
-                                                    <br><br><br>
+                                                    <br>
 													<div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
 
 													   <div style="float:left; padding:0px;margin;0px;">Sale Qualification:
@@ -178,7 +177,7 @@
 														 </select>
 													   </div>
 													</div>
-													<br>
+
 													<!--
 													<div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
 													   <div style="float:left; padding:0px;margin;0px;">Property Type:
@@ -300,11 +299,11 @@
                                                 </div>
                                                 <br><br>
 
-                                                <div style="width:58%;margin: 3px 3px 5px 50px; font-size: 9px;">
-                                                    <!--<input type="button" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="Search" iconClass="dijitNoIcon" style="float:left;" data-dojo-attach-event="onClick:doSearch"></input>
+                                                <div id="searchbuttondiv" style="display:block;width:58%;margin: 3px 3px 5px 50px; font-size: 9px;">
+                                                     <input type="button" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="Search" iconClass="dijitNoIcon" style="float:left;" data-dojo-attach-event="onClick:doSearch"></input>
 
                                                     <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:clearSearch"  label="Clear" iconClass="dijitNoIcon" style="float:right"></input>
-                                                    -->
+
                                                 </div>
 
 
