Additional Misc Fixes
- Menu state
- etc.

--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -58,7 +58,8 @@
 		 </tr>
  	    </table>
 
-          <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:none;height:0px;"  >
+          <!--<table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:none;height:0px;"  >-->
+           <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" >
 				<tr>
 				   <td></td>
 				   <td></td>
