Fixed issue with header links positioning and sizing

--- a/js/gis/dijit/NavTools/templates/NavTools.html
+++ b/js/gis/dijit/NavTools/templates/NavTools.html
@@ -1,5 +1,5 @@
 <div class="gis_NavToolsDijit" >
-    <div class="formContainer">
+    <div id="navtools_form" class="formContainer">
 
  <!--
  <i title="Zoom In" data-dojo-attach-event="onClick:zoomIn" class="fa fa-search-plus fa-2x"></i>
