--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -50,7 +50,7 @@
 
 
  		</table>
-         <table class="CSSTableGenerator"  >
+         <table id="pmn_btn1" class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
 		   				  <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebZoning" data-dojo-attach-event="onClick:ebClick"  label="County Permit Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
@@ -119,7 +119,7 @@
 
  		</table>
 
-         <table class="CSSTableGenerator"  >
+         <table id="pmn_btn2"  class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
 		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSale" data-dojo-attach-event="onClick:ebClick"  label="2014 Certified Values " iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
@@ -172,7 +172,7 @@
  		</table>
 
 
-         <table class="CSSTableGenerator"  >
+         <table id="pmn_btn3"  class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
 		   	 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
