--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -2,10 +2,10 @@
 
 
 <div class="gis_PRCMinDijit" >
-	<div  id="prcmin_frm" data-dojo-type="dijit/form/Form" data-dojo-attach-point="pcForm" class="formContainer"  style="height:725px;font-size:9px;padding:0px;margin:0px">
+	<div  data-dojo-type="dijit/form/Form" data-dojo-attach-point="pcForm" class="formContainer"  style="height:725px;font-size:9px;padding:0px;margin:0px">
 
 
-		 <table id="pcmn_mnu" data-dojo-attach-point="tbTable" data-dojo-attach-event="onClick:tbClick"  class="CSSTableGenerator"  >
+		 <table data-dojo-attach-point="tbTable" data-dojo-attach-event="onClick:tbClick"  class="CSSTableGenerator"  >
 			  <tr >
 				<td><img id="pc_zoom"  alt="zoom to parcel and view moredetails"  title="zoom to parcel"  src="img/zoom_in_1.gif" /></td>
 				<td><img id="pc_fulldet"   alt="full parcel details"  title="Open new window with full parcel details" src="img/attributes_1.gif" /></td>
@@ -13,7 +13,7 @@
 				<td><img id="pc_print"  alt="Print Parcel Property Card" title="Print Parcel Property Card" src="img/Print_1.gif" /></td>
 			  </tr>
 		 </table>
-         <table id="prcmin" data-dojo-attach-point="generalTable"  class="CSSTableGenerator"  >
+         <table data-dojo-attach-point="generalTable"  class="CSSTableGenerator"  >
 			  <tr>
 				<td></td>
 				<td></td>
@@ -50,7 +50,7 @@
 
 
  		</table>
-         <table id="pmn_btn1" class="CSSTableGenerator"  >
+         <table class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
 		   				  <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebZoning" data-dojo-attach-event="onClick:ebClick"  label="County Permit Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
@@ -59,7 +59,7 @@
  	    </table>
 
           <!--<table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" style="display:none;height:0px;"  >-->
-           <table id="prcmin_zn"  data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" >
+           <table data-dojo-attach-point="znTable"  class="CSSTableGenerator pcSubTable" >
 				<tr>
 				   <td></td>
 				   <td></td>
@@ -119,7 +119,7 @@
 
  		</table>
 
-         <table id="pmn_btn2"  class="CSSTableGenerator"  >
+         <table  class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
 		   				 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSale" data-dojo-attach-event="onClick:ebClick"  label="2014 Certified Values " iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
@@ -127,7 +127,7 @@
 		 </tr>
  	    </table>
 
-          <table id="prcmin_val" data-dojo-attach-point="slTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
+          <table  data-dojo-attach-point="slTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
 				<tr>
 				   <td></td>
 				   <td></td>
@@ -172,7 +172,7 @@
  		</table>
 
 
-         <table id="pmn_btn3"  class="CSSTableGenerator"  >
+         <table  class="CSSTableGenerator"  >
 		 <tr>
 		   <td>
 		   	 <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-point="ebSales" data-dojo-attach-event="onClick:ebClick"  label="Sales Information" iconClass="dijitNoIcon" style="width:100%;font-size:8px;padding:0px;margin:0px"></input>
@@ -180,7 +180,7 @@
 		 </tr>
  	    </table>
 
-          <table id="prcmin_sl"  data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
+          <table   data-dojo-attach-point="slsTable"  class="CSSTableGenerator" style="display:none;height:0px"  >
 				<tr>
 				   <td>Date</td>
 				   <td>Price</td>
@@ -201,8 +201,8 @@
 				</tr>
 
  		</table>
- 		<br><br><br>
- 		<div id="pcmin_spcr" style="height:50px"></div>
+ 		<!--<br><br><br>-->
+ 		<div  style="height:50px"></div>
 
 
 	</div>
